--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body class="background-body">
 
 
-<div class="container">
+<main class="container">
   <div class="container-reference">
     <section class="container-card background-color">
       <div class="content">
@@ -56,7 +56,7 @@
 
 
   </div>
-</div>
+</main>
 
 </div>
   
